fixed odd ie 11 center alignment issue more gracefully
thanks mike!

--- a/curiositymachine/sass/pages/_educator-dashboard.scss
+++ b/curiositymachine/sass/pages/_educator-dashboard.scss
@@ -313,7 +313,7 @@
   }
 
   .ai-banner-position {
-    margin-top: -56px;
+    margin-top: -28px;
     margin-bottom: 36px;
   }
 }
