--- a/curiositymachine/static/css/main.css
+++ b/curiositymachine/static/css/main.css
@@ -6496,7 +6496,7 @@ footer {
   display: initial; }
 
 .educator-dashboard .ai-banner-position {
-  margin-top: -56px;
+  margin-top: -28px;
   margin-bottom: 36px; }
 .family-dashboard .dashboard-header {
   background-color: #1f1f1f;
